--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -222,7 +222,7 @@
 
 .page-header {
     position: relative;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(img/소고기헤더1.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/소고기헤더1.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
