--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -489,6 +489,9 @@
 	line-height: 35px;
 }
 /*** Footer End ***/
+
+
+/** 로그인 회원가입 css   */
 .login-page {
 	position: absolute;
 	width: 100%;
@@ -501,7 +504,7 @@
 .login-page .login-content {
 	width: 420px;
 	padding: 40px;
-	height: 550px;
+	height: 600px;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
@@ -548,10 +551,26 @@
 	margin-top: 40px;
 }
 
+.login-page .login-content form.wrapper-box .idCheck {
+	margin-top: 25px;
+	margin-right: 20px;
+	border: none;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 0;
+	padding-left: 0;
+	box-shadow: none;
+	transition: all 0.1s ease-out;
+}
+
+.login-page .login-content form.wrapper-box .idCheck:focus {
+	outline: none;
+	border-bottom: 1px solid #EF6161;
+}
+
 .login-page .login-content form.wrapper-box .zip {
 	width: 200px;
 	padding: 6px 12px 6px 0px;
-	margin-top: 12.5px;
+	margin-top: 20px;
 	margin-right: 15px;
 	border-bottom: #e9ecef;
 	border-radius: 0;
@@ -602,7 +621,19 @@
 
 .login-page .login-content form.wrapper-box button {
 	display: inline-block;
-	margin-top: 50px;
+	margin-top: 20px;
+	border: 2px solid #7ac142;
+	background: #7ac142;
+	border-radius: 25px;
+	padding: 3px 12px 5px 12px;
+	color: #fff;
+	font-size: 14px;
+	font-weight: bold;
+	letter-spacing: 0px;
+	transition: all 0.1s ease-out;
+}
+.login-page .login-content form.wrapper-box .button-self {
+	margin-top: 20px;
 	border: 2px solid #7ac142;
 	background: #7ac142;
 	border-radius: 25px;
@@ -614,13 +645,15 @@
 	transition: all 0.1s ease-out;
 }
 
-.login-page .login-content form.wrapper-box button:hover {
+.login-page .login-content form.wrapper-box button:hover,
+.login-page .login-content form.wrapper-box .button-self:hover {
 	color: #7ac142;
 	background: #fff;
 	border: 2px solid #7ac142;
 }
 
-.login-page .login-content form.wrapper-box button:active {
+.login-page .login-content form.wrapper-box button:active,
+.login-page .login-content form.wrapper-box .button-self:active {
 	box-shadow: none;
 }
 
