--- a/src/main/webapp/css/member/myPage.css
+++ b/src/main/webapp/css/member/myPage.css
@@ -1,7 +1,7 @@
 .mypage-container {
-  width: 1000px;
+  width: 1200px;
   margin: 0 auto;
-  border: 2px solid #000;
+  border: 2px solid #81c408;
   padding: 30px;
   text-align: center;
   background-color: #fff;
@@ -44,20 +44,27 @@
 .menu-item {
   flex: 1; /* 모든 버튼이 동일 너비 */
   text-align: center;
-  border: 1px solid #000;
   padding: 15px 0;
-  background-color: #f9f9f9;
+  color: #fff;
+  border: 2px solid #7ac142;
+  background: #7ac142;
+  border-radius: 25px;
   cursor: pointer;
-  transition: background-color 0.2s ease;
+  font-size: 14px;
+  font-weight: bold; 
+  letter-spacing: 0px;
+  transition: all 0.1s ease-out;
 }
 
 .menu-item:hover {
-  background-color: #efefef;
+ color: #7ac142;
+	background: #fff;
+	border: 2px solid #7ac142;
 }
 
 .section-content {
   margin-top: 30px;
   padding: 20px;
   border-top: 1px solid #ccc;
-  text-align: left;
+  text-align: center;
 }
