--- a/src/main/webapp/css/order/modalstyles.css
+++ b/src/main/webapp/css/order/modalstyles.css
@@ -36,3 +36,39 @@
   font-size: 25px;
   cursor: pointer;
 }
+
+
+#addressPopUp {
+  position: fixed;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: none;
+}
+
+#addressModalBody {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  max-height: 400px;
+  overflow-y: auto;
+  padding: 30px;
+  margin: 0 auto;
+  border: 1px solid #777;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+#addressCloseBtn {
+  float: right;
+  font-weight: bold;
+  color: #777;
+  font-size: 25px;
+  cursor: pointer;
+}
