헤더 수정, 로그인 했을 때 아이디나 비밀번호 옳지 않으면 알런트

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -116,6 +116,12 @@
 .topbar .top-link a small:hover i {
 	color: var(--bs-primary) !important;
 }
+
+.small_point {
+	cursor: default;
+	user-select: none;
+}
+
 /*** Topbar End ***/
 
 /*** Navbar Start ***/
